# HealthAgent

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  bp_records.py  chat.py  ocr.py  router.py  users.py
backend/app/cli/: kb.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  bp_record.py  conversation.py  user.py
backend/app/schemas/: bp_record.py  chat.py  user.py
backend/app/services/: bp_record_service.py  chat_store.py  ocr_service.py  user_service.py
backend/app/services/ocr/: baidu_client.py  extractor.py  lcd_classifier.pkl  lcd_classifier.py  preprocess.py  qwen_vl_client.py
backend/data/kb/: chronic-01-self-management.md  hbp-01-definition.md  hbp-02-staging.md  hbp-03-risk-factors.md  hbp-04-lifestyle.md  hbp-05-home-measurement.md  hbp-06-rhythm-whitecoat.md  hbp-07-targets.md  hbp-08-emergency.md  hbp-09-trend-reading.md  hbp-10-faq.md  hr-01-basics.md
backend/tests/: conftest.py  ocr_bench.py  ocr_bench_all.py  ocr_bench_dual.py  smoke_p2.py  test_auth.py  test_bp_records.py  test_chat_api.py  test_e2e_full_flow.py  test_healthz.py  test_ocr_api.py  test_ocr_extractor.py  test_ocr_preprocess.py  test_ocr_vlm_fallback.py  test_rag_chat_service.py  test_rag_chunker.py  test_rag_ingest.py  test_rag_llm_client.py  test_security.py  test_users.py
backend/tools/: rag_eval.py
(+73 files in other folders)
