[project]
name = "health-agent-backend"
version = "0.1.0"
description = "Personal Health Management Agent - Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy==2.0.35",
    "alembic==1.13.3",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.12",
    "email-validator==2.2.0",
    "loguru==0.7.2",
    "psycopg[binary]==3.2.3",
    "sqlite-vec==0.1.6",
    "diskcache==5.6.3",
    "requests==2.32.3",
    "numpy==1.26.4",
    "opencv-python==4.10.0.84",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
    "pytest-cov==5.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
